# mcp-gateway

./: .gitignore  Caddyfile  Dockerfile  README.md  compose.local.yml  compose.yml  docker-compose.yml  dockerfile  env.template  fly.toml  logs.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  settings.py
.github/actions/download-env/: action.yml
.github/actions/prepare-dev/: action.yml
.github/workflows/: deploy-dokku.yml  static_analysis.yml  unittests.yml
coredns/: Corefile
frontend/: account.html  auth_options.html  template.html
frontend/policies/: google-oauth.html  privacy-policy.html  terms-of-use.html
src/: __init__.py  auth.py  docker.py  hosted_link_proxy.py  http_utils.py  logs.py  main.py  mcp.py  mcp_client.py  multi_oauth_provider.py  proxy_sessions.py  residential_proxy_sessions.py  server_manager.py  session.py  settings.py  signin_proxy.py  web_page_proxy.py
src/auth/: auth.py  constants.py  getgather_oauth_token.py  multi_oauth_provider.py  third_party_providers.py
src/container/: container.py  engine.py  manager.py  service.py
src/proxies/: mcp.py  web.py
src/proxy/: __init__.py  location_hierarchy.py  selector.py  validation.py
tests/: conftest.py  test_main.py  test_server_manager.py  testing.py
tests/container/: test_manager.py  test_service.py
tests/proxies/: test_mcp.py
