[project]
name = "mcp-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiodocker>=0.24.0",
    "fastapi>=0.116.1",
    "fastmcp>=2.12.2",
    "nanoid>=2.0.0",
    "pydantic-settings>=2.10.1",
    "rich>=14.1.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "icecream>=2.1.7",
    "ipython>=9.5.0",
    "pyright>=1.1.405",
    "ruff>=0.13.0",
]

[tool.ruff]
src = ["src"]
exclude = [
  "**/__pycache__",
  "**/.pytest_cache",
  "**/.venv",
  "**/venv",
  "**/htmlcov",
  "**/alembic/versions",
  "**/node_modules",
  "**/*env/*",
  "**/.git",
  "**/*.yaml",
  "**/*.yml",
]
line-length = 100
preview = true

[tool.ruff.lint]
select = ["I", "UP045", "UP006", "UP007"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["src"]

[tool.yamlfix]
exclude = ["**/.venv/**"]
explicit_start = false
line_length = 120
whitelines = 1
