[project]
name = "mcp-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiorwlock>=1.5.0",
    "cachetools>=6.2.2",
    "fastapi>=0.116.1",
    "fastmcp>=2.12.4",
    "jinja2>=3.1.6",
    "logfire[fastapi]>=4.13.2",
    "loguru>=0.7.3",
    "nanoid>=2.0.0",
    "psutil>=7.1.3",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.3",
    "rich>=14.1.0",
    "segment-analytics-python>=2.3.4",
    "sentry-sdk[fastapi]>=2.41.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "assertpy>=1.1",
    "cyclopts>=4.0.0",
    "icecream>=2.1.7",
    "ipython>=9.5.0",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-env>=1.2.0",
    "ruff>=0.13.0",
]

[tool.ruff]
src = ["src"]
exclude = [
  "**/__pycache__",
  "**/.pytest_cache",
  "**/.venv",
  "**/venv",
  "**/htmlcov",
  "**/alembic/versions",
  "**/node_modules",
  "**/*env/*",
  "**/.git",
  "**/*.yaml",
  "**/*.yml",
]
line-length = 100
preview = true

[tool.ruff.lint]
select = ["I", "UP045", "UP006", "UP007"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["src"]

[tool.yamlfix]
exclude = ["**/.venv/**"]
explicit_start = false
line_length = 120
whitelines = 1


[tool.pytest.ini_options]
testpaths = "tests"
python_files = "test_*.py"
python_functions = "test_*"
norecursedirs = ".* venv node_modules"
pythonpath = "."
env = [ 
  "ENV_FILE=.env.test",
]

